Добавление авторизации и регистрации

--- a/templates/adress.html
+++ b/templates/adress.html
@@ -7,6 +7,6 @@
 {% block body %}
 <div class="container">
  <h1>Наши адреса</h1>
- <h2> с. Нижняя Иволга, улица братска, дом 9</h2>
+ <h2> с. Нижняя Иволга, улица братская, дом 9</h2>
 </div>
 {% endblock %}
