--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
         <div class="navbar-wrap">
             <ul class="navbar-menu">
             <li><a href="/about">О нас</a></li>
-            <li><a href="/login">Авторизация</a></li>
+            <li><a href="/login_page">Авторизация</a></li>
             <li><a href="/register">Регистрация</a></li>
             <li><a href="#" class="dropdown-toggle" easy-toggle="#dropdown" easy-class="show" easy-rcoe>Каталог</a></li>
                 <li class="dropdown">
@@ -75,7 +75,7 @@
       <h3>О компании</h3>
       <ul>
         <li><a href="/about">О магазине</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li><a href="/register">Добавить</a></li>
         <li><a href="#">Условия использования</a></li>
         <li><a href="#">Политика конфиденциальности</a></li>
       </ul>
