--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -27,7 +27,7 @@
             <td><input type="password" name="password"></td>
         </tr>
         <tr>
-            <td><a href="{{ url_for(register) }}">Регистрация</a></td>
+            <td><a href="/register">Регистрация</a></td>
             <td><input type="submit" value="Login"></td>
         </tr>
     </table>
