--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -36,3 +36,17 @@ color: #000;
 .dropdown-menu a:hover{
 opacity: 1;
 }
+
+.auth-container {
+  width: 300px;
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+}
+
+.auth-form {
+  display: flex;
+  flex-direction: column;
+}
