--- a/templates/create.html
+++ b/templates/create.html
@@ -11,7 +11,7 @@
         <input type="text" name="title" id="title" class="form-control" placeholder="Введите название товара"><br>
         <input type="number" name="price" id="price" class="form-control" placeholder="Введите цену товара"><br>
         <input type="text" name="text" id="text" class="form-control" placeholder="Введите описание товара"><br>
-
+        <input type="text" name="image" id="image" class="form-control" placeholder="Вставьте ссылку на изображение"><br>
         <button class="btn btn-success" type="submit">добавить товар</button>
     </form>
 </div>
