--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -45,6 +45,11 @@ opacity: 1;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
 }
+ .auth-title {
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
 
 .auth-form {
   display: flex;
