--- a/static/css/shapka.css
+++ b/static/css/shapka.css
@@ -1,5 +1,3 @@
-
-
 .navbar{
 width: 100%;
 height:70px;
@@ -74,8 +72,22 @@ color: green;
 text-decoration: none;
 }
 
-.footer{
-width: 100%;
-height: auto;
-background-color: #000;
+.buy-item{
+margin-left: 30px;
+margin-right: 10px;
+padding: 10px 30px;
+background-color: #5bd74c;
+border-radius: 100px;
+color: #000;
+text-decoration: none;
+box-shadow: 0 4px 6px rgba(91, 215, 76, .2)
+transition: all .1s ease-in-out;
+}
+
+.catalog{
+text-decoration: none;
+color: black;
+font-size: 26px;
+margin: 10px 0px;
+font-weight: 500;
 }
