--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -5,31 +5,20 @@
 {% endblock %}
 
 {% block body %}
-<h1>Авторизация</h1>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+<div class="log-page">
+    <div class="wrapper">
+        <form method="POST">
+            <h1>Авторизация</h1>
+            <div class="input-box">
+                <input type="text" name="login" placeholder="Логин" required>
+            </div>
+            <div class="input-box">
+                <input type="password" name="password" placeholder="Пароль" required>
+                <button type="submit" class="btn" value="login">Login</button>
+            </div>
 
-<form method="POST">
-    <table>
-        <tr>
-            <td>Логин</td>
-            <td><input type="text" name="login"></td>
-        </tr>
-        <tr>
-            <td>Пароль</td>
-            <td><input type="password" name="password"></td>
-        </tr>
-        <tr>
-            <td><a href="/register">Регистрация</a></td>
-            <td><input type="submit" value="Login"></td>
-        </tr>
-    </table>
-</form>
+        </form>
+
+    </div>
+</div>
 {% endblock %}
