--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,6 @@
 {% endblock %}
 
 {% block body %}
-<h1>Регистрация</h1>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul class=flashes>
@@ -15,26 +14,26 @@
     </ul>
   {% endif %}
 {% endwith %}
-<div class="auth-container">
-    <form method="POST">
-        <table class="auth-form">
-            <tr>
-                <td>Логин</td>
-                <td><input type="text" name="login"></td>
-            </tr>
-            <tr>
-                <td>Пароль</td>
-                <td><input type="password" name="password"></td>
-            </tr>
-            <tr>
-                <td>Подтвердите пароль</td>
-                <td><input type="password" name="password2"></td>
-            </tr>
-            <tr>
-                <td><a href="/login_page">Авторизация</a></td>
-                <td><input type="submit" value="Register"></td>
-            </tr>
-        </table>
-    </form>
+
+<div class="log-page">
+    <div class="wrapper">
+        <form action="">
+            <h1>Авторизация</h1>
+            <div class="input-box">
+                <input type="text" name="login" placeholder="login" required>
+            </div>
+            <div class="input-box">
+                <input type="password" name="password" placeholder="password" required>
+            </div>
+            <div class="input-box">
+                <input type="password" name="password2" placeholder="password" required>
+            </div>
+            <button type="submit" class="btn">Login</button>
+
+            <div class="register-link">
+                <p>нет аккаунта? <a href="/register">Зарегестрироваться</a></p>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
