--- a/templates/submit_order.html
+++ b/templates/submit_order.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="container">
- <h2>Введите номер заказа:</h2>
+ <h2>Введите ваш заказ:</h2>
     <form action="/submit_order" method="post">
         <input type="text" name="order_number" placeholder="Номер заказа"><br><br>
         <input type="submit" value="Отправить">
