--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,68 +1,5 @@
-nav {
-  overflow: hidden;
-  background-color: #dcedc8;
-}
-
-nav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-nav a:hover {
-  background-color: #8bc34a;
-}
-
-nav a.active {
-  background-color: #8bc34a;
-  color: white;
-}
-
-nav .search-container {
-  float: right;
-}
-
-nav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-
-nav .search-container button {
-  float: right;
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #8bc34a;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-
-nav .search-container button:hover {
-  background: #bdbdbd;
-}
-
-@media screen and (max-width: 600px) {
-  nav .search-container {
-    float: none;
-  }
-  nav a, nav input[type=text], nav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  nav input[type=text] {
-    border: 1px solid #689f38;
-  }
+.search-bar{
+margin: 10px 10px;
 }
 
 .class1 {
