--- a/templates/create.html
+++ b/templates/create.html
@@ -12,6 +12,12 @@
         <input type="number" name="price" id="price" class="form-control" placeholder="Введите цену товара"><br>
         <input type="text" name="text" id="text" class="form-control" placeholder="Введите описание товара"><br>
         <input type="text" name="image" id="image" class="form-control" placeholder="Вставьте ссылку на изображение"><br>
+        <label for="category">Category:</label>
+        <select id="category" name="category">
+            {% for category in categories %}
+                <option value="{{ category.id }}">{{ category.name }}</option>
+            {% endfor %}
+        </select>
         <button class="btn btn-success" type="submit">добавить товар</button>
     </form>
 </div>
