--- a/templates/help.html
+++ b/templates/help.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="container">
  <h2>Если вам нужна помощь, оставьте ваш номер телефона.</h2>
-    <form action="/help" method="post">
+    <form action="/help" method="post" class="send">
         <input type="text" name="phone_number" placeholder="Номер телефона"><br><br>
         <input type="submit" value="Отправить">
     </form>
