--- a/static/css/send.css
+++ b/static/css/send.css
@@ -1,23 +1,33 @@
-form {
-
+.search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-input[type="text"] {
-    width: 100%;
+.search-bar form {
+    display: flex;
+    align-items: center;
+}
+
+.search-bar input[type="text"] {
     padding: 8px;
-    margin: 5px 0;
-    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    margin-right: 5px;
+    margin-top: 10px;
+    width: 700px;
 }
 
-input[type="submit"] {
-    background-color: #4CAF50;
+.search-bar input[type="submit"] {
+    padding: 8px 15px;
+    background-color: #007bff;
     color: white;
-    padding: 10px 15px;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
+    border-radius: 20px;
 }
 
-input[type="submit"]:hover {
-    background-color: #45a049;
+.search-bar input[type="submit"]:hover {
+    background-color: #0056b3;
+
 }
