--- a/templates/register.html
+++ b/templates/register.html
@@ -5,34 +5,17 @@
 {% endblock %}
 
 {% block body %}
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-
 <div class="log-page">
-    <div class="wrapper">
-        <form action="">
-            <h1>Авторизация</h1>
+    <div class="wrapper-register">
+        <form method="POST">
+            <h1>Регистрация</h1>
             <div class="input-box">
                 <input type="text" name="login" placeholder="login" required>
             </div>
             <div class="input-box">
                 <input type="password" name="password" placeholder="password" required>
             </div>
-            <div class="input-box">
-                <input type="password" name="password2" placeholder="password" required>
-            </div>
-            <button type="submit" class="btn">Login</button>
-
-            <div class="register-link">
-                <p>нет аккаунта? <a href="/register">Зарегестрироваться</a></p>
-            </div>
+            <button type="submit" class="btn" value="Register">Зарегестрироваться</button>
         </form>
     </div>
 </div>
