--- a/templates/seller.html
+++ b/templates/seller.html
@@ -8,16 +8,13 @@
 <div class="log-page">
     <div class="wrapper">
         <form method="POST">
-            <h1>Авторизация</h1>
+            <h1>Авторизация продавца</h1>
             <div class="input-box">
                 <input type="text" name="login" placeholder="Логин" required>
             </div>
             <div class="input-box">
                 <input type="password" name="password" placeholder="Пароль" required>
-                <button type="submit" class="btn" value="login">Войти</button>
-            </div>
-            <div class="register-link">
-                <a href="/register" class="register-link">регистрация</a>
+                <button type="submit" class="btn" value="login">Login</button>
             </div>
         </form>
     </div>
