--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                                             <h3>{{ product.title }}</h3>
                                             <div class="info-price">
                                                 <span class="price">{{ product.price }} <small>руб.</small></span>
-                                                <a href="/submit_order" class="buy-item">купить</a>
+                                                <a href="/submit_order/{{ product.id }}" class="buy-item">купить</a>
                                             </div>
                                         </div>
                                     </div>
