--- a/templates/submit_order.html
+++ b/templates/submit_order.html
@@ -8,6 +8,7 @@
 <div class="container">
     <h1>Оформление заказа</h1>
     <form method="post">
+        <p>Вы выбрали: {{product_name}}</p>
         <input type="text" name="name_buyer" id="name_buyer" class="form-control" placeholder="Введите ваше имя"><br>
         <input type="number" name="number_b" id="number_b" class="form-control" placeholder="Введите ваш номер телефона"><br>
         <input type="text" name="mail_buyer" id="mail_buyer" class="form-control" placeholder="Введите ваш E-mail"><br>
